// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box having custom background color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
  style="background-color: white; border-color: white;"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box having custom border color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
  style="border: 1px solid grey;"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box having custom border left color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
  style="border-left: 5px solid blue;"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of default type with content renders correctly  1`] = `
<div
  class="alert box-container alert-default"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        This is the default box
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of definition type light style renders correctly 1`] = `
<div
  class="alert box-container border-primary alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-primary"
      >
        
        <i
          class="fas fa-atlas"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of definition type renders correctly 1`] = `
<div
  class="alert box-container alert-primary"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        <i
          class="fas fa-atlas"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of important type light style renders correctly 1`] = `
<div
  class="alert box-container border-danger alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-danger"
      >
        
        <i
          class="fas fa-flag"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of important type renders correctly 1`] = `
<div
  class="alert box-container alert-danger"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        <i
          class="fas fa-flag"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of info type light style renders correctly 1`] = `
<div
  class="alert box-container border-info alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-info"
      >
        
        <i
          class="fas fa-info"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of info type renders correctly 1`] = `
<div
  class="alert box-container alert-info"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        <i
          class="fas fa-info"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of seamless style renders correctly 1`] = `
<div
  class="alert box-container seamless"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <div
        aria-hidden="true"
        class="vertical-divider alert-default"
      />
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of success type light style renders correctly 1`] = `
<div
  class="alert box-container border-success alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-success"
      >
        
        <i
          class="fas fa-check"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of success type renders correctly 1`] = `
<div
  class="alert box-container alert-success"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        <i
          class="fas fa-check"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of tip type light style renders correctly 1`] = `
<div
  class="alert box-container border-success alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-success"
      >
        
        <i
          class="fas fa-lightbulb"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of tip type renders correctly 1`] = `
<div
  class="alert box-container alert-success"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        <i
          class="fas fa-lightbulb"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of warning type light style renders correctly 1`] = `
<div
  class="alert box-container border-warning alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-warning"
      >
        
        <i
          class="fas fa-exclamation"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of warning type renders correctly 1`] = `
<div
  class="alert box-container alert-warning"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        <i
          class="fas fa-exclamation"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of wrong type light style renders correctly 1`] = `
<div
  class="alert box-container border-danger alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-danger"
      >
        
        <i
          class="fas fa-times"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box of wrong type renders correctly 1`] = `
<div
  class="alert box-container alert-danger"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        <i
          class="fas fa-times"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with custom color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
        style="color: pink;"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with custom icon color and header renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <div
      class="box-header-wrapper"
    >
      <div
        class="icon-wrapper"
        style="color: red;"
      >
        
        :fas-plus:
        
      </div>
      <div
        class="box-header"
      >
        
        A header
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="box-body-wrapper box-body-wrapper-with-heading"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with custom icon color and light renders correctly 1`] = `
<div
  class="alert box-container border-warning alert-border-left"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper text-warning"
        style="color: red;"
      >
        
        <i
          class="fas fa-exclamation"
        />
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with custom icon color and no header renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
        style="color: red;"
      >
        
        :fas-plus:
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with dismissible option renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper alert-dismissible-box"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        data-bs-dismiss="alert"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`Box with header renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <div
      class="box-header-wrapper"
    >
      <!--v-if-->
      <div
        class="box-header"
      >
        
        A header
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="box-body-wrapper box-body-wrapper-with-heading"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with icon and icon-size renders correctly 1`] = `
<div
  class="alert box-container alert-info"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper fa-2x"
      >
        
        :rocket:
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with icon renders correctly 1`] = `
<div
  class="alert box-container alert-info"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <div
        class="icon-wrapper"
      >
        
        :rocket:
        
      </div>
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with no-background option renders correctly 1`] = `
<div
  class="alert box-container alert-default no-background"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with no-border option renders correctly 1`] = `
<div
  class="alert box-container alert-default no-border"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with no-icon option renders correctly 1`] = `
<div
  class="alert box-container alert-success"
>
  <!--v-if-->
  <div
    class="header-and-body"
  >
    <!--v-if-->
    <div
      class="box-body-wrapper"
    >
      <!--v-if-->
      <!--v-if-->
      <div
        class="contents"
      >
        
        
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Box with no-page-break option renders correctly 1`] = `
<div
  class="alert box-container alert-default no-page-break"
>
  <!---->
   
  <div
    class="header-and-body"
  >
    <!---->
     
    <div
      class="box-body-wrapper"
    >
      <!---->
       
      <!---->
       
      <div
        class="contents"
      />
       
      <!---->
    </div>
  </div>
</div>
`;
